[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-debugger"
version = "0.1.0"
description = "Minimal SWE-bench runner scaffold for a user-supplied solver function."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.19.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]
eval = [
  "swebench>=4.0.0",
]

[project.scripts]
auto-debugger = "auto_debugger.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
